# PPM

./: .dockerignore  .gitignore  .gitmodules  LICENSE  PPM.toml  Ppm.c  README.md  eleventy.config.mjs  esbuild.config.mjs  package-lock.json  package.json  ppm_cli.py  pyproject.toml  server.json  solution.cpp  ssh-keygen -t ed25519 -C "Josef_edwards@yahoo.com"  ssh-keygen -t ed25519 -C "Josef_edwards@yahoo.com".pub  transformer_lattice.c  tsconfig.json
.github/: FUNDING.yml
.github/copilot/: mcp.json
.github/workflows/: FUNDING.yml  Pyton_packages.yml  mcp-registry-publish.yml  msbuild.yml  npm-publish.yml  ppm-ci.yml  publish.yml  pypi-publish.yml
Numpy-lib/: Numpy.py
Ppm-lib/: Ppm-cli.py  Pypm.c
Ppm-lib/pmll_mcp/: __init__.py  __main__.py  pmll_core.py  pmll_mcp_server.py
Q_promise_lib/: Makefile  Setup.py  setup.py
Resolver-lib/: Importresolver.h  Importresolver.py  Pep.py  Transformer-integrator-resolver.py
contracts/: TransparentUpgradeableProxy.sol
mcp/: Dockerfile  README.md  agent_instructions.md  conftest.py  mcp_manifest.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
mcp/__tests__/: combined-speed.test.ts  contextplus-speed.test.ts  graphql.test.ts  kv-store.test.ts  memory-graph.test.ts  peek.test.ts  server.test.ts  solution-engine.test.ts
mcp/benchmarks/: contextplus-standalone-speed.md  speed-test-results.md  three-way-speed-comparison.md
mcp/braiins-pool/: .env.example  Dockerfile  README.md  docker-compose.redis.yml  docker-compose.yml  mcp_manifest.json  package-lock.json  package.json  tsconfig.json
mcp/braiins-pool/src/api/: client.ts  endpoints.ts  types.ts
mcp/braiins-pool/src/server/: auth.ts  index.ts  tools.ts
mcp/braiins-pool/src/utils/: cache.ts  logger.ts  ratelimit.ts
mcp/braiins-pool/tests/: cache.test.ts  client.test.ts  ratelimit.test.ts
mcp/pmll_memory_mcp/: __init__.py  embeddings.py  memory_graph.py  server.py  solution_engine.py
mcp/src/: embeddings.ts  graphql.ts  index.ts  kv-store.ts  memory-graph.ts  peek.ts  q-promise-bridge.ts  solution-engine.ts
mcp/tests/: __init__.py  test_combined_speed.py  test_contextplus_speed.py  test_kv_store.py  test_memory_graph.py  test_peek.py  test_server.py  test_solution_engine.py
mcp/unstoppable-domains/: README.md  claude_desktop_config.json  mcp_manifest.json
notebooks/: arc_agi3_agent.ipynb
scripts/: README.md  pmll_to_copilot_memory.py
src/: index.html  index.njk
src/css/: style.css
src/js/: main.ts
src/pages/dao/wg/: rules.mdx
tests/: test_mcp_registry.py  test_pmll_mcp.py  test_ppm_publish.py  test_q_promises.py
