[project]
name = "pmll-memory-mcp"
version = "0.2.0"
description = "PMLL Memory MCP Server — persistent KV context memory, Q-promise deduplication, and Unstoppable Domains Web3 integration for Claude Sonnet/Opus agent tasks"
readme = "README.md"
authors = [{ name = "drQedwards" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "anyio>=4.0.0",
]

[project.scripts]
pmll-memory-mcp = "pmll_memory_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
