[project]
name = "pmll-memory-mcp"
version = "2.0.0"
description = "PMLL Memory MCP Server v2 — persistent memory logic loop with short-term KV cache (peek pattern), Q-promise deduplication, Context+ long-term semantic memory graph, and solution engine. Four-way benchmarked: Combined Context+ + PMLL/peek delivers 36ms (TS) / 78ms (PY) total — fastest configuration. 15 tools, agent_instructions workflow included. 99% accuracy in Claude Sonnet/Opus agent tasks."
readme = "README.md"
authors = [{ name = "drQedwards" }]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "mcp",
    "model-context-protocol",
    "pmll",
    "memory",
    "kv-store",
    "q-promise",
    "context-plus",
    "memory-graph",
    "semantic-search",
    "solution-engine",
    "claude",
    "agent",
    "agent-instructions",
    "benchmarks",
    "peek-cache",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "anyio>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/drQedwards/PPM"
Repository = "https://github.com/drQedwards/PPM"
Issues = "https://github.com/drQedwards/PPM/issues"
Changelog = "https://github.com/drQedwards/PPM/releases"

[project.scripts]
pmll-memory-mcp = "pmll_memory_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
